# BlockHandler

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.MD  conanfile.py  docker-compose.yml
.github/workflows/: cmake-multi-platform.yml
conan/: pyvenv.cfg
include/: block_handler.h
src/: block_handler.cpp  main.cpp
tests/: block_handler_test.cpp
